Add content page route
Co-authored-by: Safia Ali <safiaali@hotmail.com>

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -67,6 +67,11 @@ body,
 .padding-sides {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.padding-sm {
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-top: 1rem;
 }
 
