--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -258,6 +258,9 @@ input[disabled] {
 .flex-end {
   justify-content: flex-end;
 }
+.flex.flex-grow {
+  flex-grow: 1;
+}
 .flex-center {
   justify-content: center;
 }
