--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -284,6 +284,16 @@ input[disabled] {
   text-align: center;
 }
 
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .font-light {
   font-weight: 300;
 }
@@ -427,4 +437,8 @@ button.primary,
   width: 17px;
   animation: spin 1s linear infinite;
   filter: invert(1);
+}
+
+.adult-profile {
+  max-width: 600px;
 }
