--- a/src/Layout/ContentNav.css
+++ b/src/Layout/ContentNav.css
@@ -71,24 +71,29 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 /* Wrapper for item list */
-.bm-item-list {
+.content-item-list {
   color: #b8b7ad;
   padding: 0.8em;
 }
 
-.bm-item-list a {
-  padding: 0.8em;
+.content-item-list a {
+  padding: 0.3rem;
 }
 
-.bm-item-list a span {
+.content-item-list a span {
   margin-left: 10px;
   font-weight: 700;
 }
 
 /* Individual item */
-.bm-item {
+/* .bm-item {
   display: inline-block;
   text-align: center;
+} */
+
+.content-item {
+  display: inline-block;
+  text-align: left !important;
 }
 
 .bm-item:focus {
@@ -98,4 +103,17 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Styling of overlay */
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
+}
+
+.Collapsible__contentInner {
+  display: flex;
+  flex-direction: column;
+}
+
+.Collapsible {
+  padding-bottom: 1.5rem;
+}
+
+.is-open {
+  font-weight: bold;
 }
