--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -479,3 +479,15 @@ button.primary,
 .wonder-color{
   color:#28424c;
 }
+.txt-background {
+  background-color: #abc961;
+  width: 100%;
+  height: 100%;
+  color: white !important;
+
+
+  /* margin: 0 2rem; */
+}
+.white{
+  color:white;
+}
