Styled profile and added growing me logo on all pages with linl to content

--- a/src/Layout/Carousel.css
+++ b/src/Layout/Carousel.css
@@ -24,6 +24,7 @@
   border: 0;
   font-size: 32px;
   cursor: pointer;
+  /* background-image: url('./assets/content/arrow_right'); */
 }
 .carousel .control-arrow:focus,
 .carousel .control-arrow:hover {
@@ -85,6 +86,7 @@
   top: 50%;
   margin-top: -13px;
   font-size: 18px;
+   /* background-image: url('./assets/content/arrow_right'); */
 }
 .carousel .thumbs-wrapper {
   margin: 20px;
@@ -282,11 +284,10 @@
   top: 0;
   right: 0;
   padding: 5px;
-  font-size: 10px;
+  font-size: 1rem;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
   color: #fff;
 }
 .carousel:hover .slide .legend {
   opacity: 1;
 }
-
