--- a/src/Layout/ContentNav.css
+++ b/src/Layout/ContentNav.css
@@ -47,13 +47,15 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu-wrap {
   /* position: fixed; */
   height: 100%;
+  cursor: pointer;
+
 }
 
 /* General sidebar styles */
 .bm-menu {
   background: #d5e4b0;
   padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+  font-size: 1.8rem;
 }
 
 .bm-menu a {
@@ -108,6 +110,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .Collapsible__contentInner {
   display: flex;
   flex-direction: column;
+  font-size: 1.5rem;
 }
 
 .Collapsible {
@@ -116,4 +119,5 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .is-open {
   font-weight: bold;
+
 }
