--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -163,6 +163,10 @@ body,
   display: none;
 }
 
+.invisible {
+  display: none;
+}
+
 @media only screen and (min-width: 33.75em) {
   /* 540px */
   .container {
