Get child_avatar to appear correctly in navbar
Co-authored-by: Safia Ali <safiaali@hotmail.com>

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -596,7 +596,12 @@ p {
   background-color: #d19f00 !important;
   border: none !important;
 }
-.child_avatar-logo{
-   
-  width: 100px;
+.child_avatar-logo {
+  width: 60px;
+  margin-top: 25px;
+  /* width: 100px; */
+}
+
+.metree--container {
+  top: -20px;
 }
