Make topnav icons opaque when they are not active
Co-authored-by: Safia Ali <safiaali@hotmail.com>

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -596,7 +596,10 @@ p {
   background-color: #d19f00 !important;
   border: none !important;
 }
-.child_avatar-logo{
-   
+.child_avatar-logo {
   width: 100px;
+}
+
+.opaque {
+  opacity: 0.3;
 }
