Add hover effect to top nav and margin 1 rem to top nav so hover image has space, remove border on carousel, add background image to carousel area

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -607,3 +607,14 @@ p {
 .opaque {
   opacity: 0.3;
 }
+
+.content-nav a:hover{
+transform: scale(1.2);
+opacity: 1;
+}
+.margin-1{
+  margin:1rem;
+}
+.inner-content_background{
+  background-image: url("assets/play_background_white.svg");
+}
