--- a/src/Layout/Carousel.css
+++ b/src/Layout/Carousel.css
@@ -135,7 +135,7 @@
 }
 .carousel.carousel-slider {
   background-color: white;
-  border: 3px solid #bcd38c;
+  /* border: 3px solid #bcd38c; */
   border-radius: 1rem;
   position: relative;
   margin: 0 1rem;
