Make top nav bar solid colour
Co-authored-by: Safia Ali <safiaali@hotmail.com>

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -603,6 +603,9 @@ p {
 }
 .metree--container {
   top: -20px;
+  width: 100%;
+  height: 110px;
+  background-color: #ecf0d9;
 }
 .opaque {
   opacity: 0.3;
