--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -606,14 +606,23 @@ p {
   width: 100%;
   height: 110px;
   background-color: #ecf0d9;
+  z-index: 5001;
 }
 .opaque {
   opacity: 0.3;
 }
 
+.label-width {
+  min-width: 6rem;
+}
+
 @media (max-width: 768px) {
   .me-tree-container--mobile {
     flex-direction: column-reverse;
+  }
+
+  .mobile-column {
+    flex-direction: column !important;
   }
 
   .mobile-hide {
@@ -630,6 +639,11 @@ p {
     margin-top: 3rem;
   }
 
+  h1 {
+    margin-top: 2.5rem;
+    font-size: 2rem;
+  }
+
   h2 {
     font-size: 1rem;
     font-weight: unset;
@@ -641,7 +655,26 @@ p {
     margin-right: auto;
   }
 
+  .mobile-wide {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .mobile-no-margin {
     margin-top: 0 !important;
+  }
+
+  .pad-1 {
+    padding: 0.2rem;
+  }
+
+  label {
+    font-size: 1.2rem;
+    margin: 0 5px 0 0;
+  }
+
+  .label-width {
+    min-width: 5rem;
   }
 }
