--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -654,11 +654,13 @@ p {
   h1 {
     margin-top: 2.5rem;
     font-size: 2rem;
+    z-index: 100000;
   }
 
   h2 {
     font-size: 1rem;
     font-weight: unset;
+    z-index: 100000;
   }
 
   .mobile-narrow {
