--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -607,7 +607,7 @@ p {
 }
 
 .gallery-width{
-  width: 40vw;
+  width: 30vw;
 }
 .magic-link {
   background-color: #d19f00 !important;
@@ -791,4 +791,10 @@ p {
   .mobile-gap{
     gap:0.5rem;
   padding:0;}
+}
+
+@media only screen and (min-width: 1200px) {
+  .me-tree-desktop{
+    justify-content: center;
+  }
 }
