Buggy deletion of growing me items happens now
Co-authored-by: Safia Ali <safiaali@hotmail.com>

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -680,6 +680,10 @@ p {
   grid-area: empty;
 }
 
+.on-top {
+  z-index: 3000;
+}
+
 /* ************ MEDIA QUERIES START HERE ******** */
 
 @media only screen and (max-width: 768px) {
