When click completed section, move automatically to next play subsection. Also added locked class to grey out later sections (no functionality here yet)
Co-authored-by: Safia Ali <safiaali@hotmail.com>

--- a/src/layout/ContentNav.css
+++ b/src/layout/ContentNav.css
@@ -120,3 +120,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
   font-weight: bold;
   cursor: pointer;
 }
+
+.locked {
+  opacity: 0.3;
+  cursor: not-allowed;
+}
