--- a/src/layout/Carousel.css
+++ b/src/layout/Carousel.css
@@ -274,7 +274,7 @@
   opacity: 0.3;
   filter: alpha(opacity=30);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
-  background: #fff;
+  background: #28424c;
   border-radius: 50%;
   width: 8px;
   height: 8px;
