change inner content background image, carousel add white background, remove title.
Co-authored-by: Jo Humphrey <31373245+jamdelion@users.noreply.github.com>

--- a/src/layout/Carousel.css
+++ b/src/layout/Carousel.css
@@ -134,8 +134,8 @@
   vertical-align: top;
 }
 .carousel.carousel-slider {
-  /* background-color: white; */
-  background-color: transparent;
+  background-color: white;
+  /* background-color: transparent; */
   /* border: 3px solid #bcd38c; */
   border-radius: 1rem;
   position: relative;
